# esp32s3hidmouse

./: README.md  hid.h  hid_device.c  hid_device.h  hid_host_example.cpp  mousereader.cpp  sdkconfig.defaults  tusb.cpp  tusb_hid_example_main.cpp
components/Ethernet/: CMakeLists.txt
components/Ethernet/src/: EthernetESP32.h
main/: CMakeLists.txt  idf_component.yml  tusb_hid_example_main.cpp  tusb_mouse.cpp  tusb_mouse_ethernet.cpp  usbtreedata.txt
scratch/: edit_configs_2.py
